style.css
body {
    display: flex;
    flex-direction: column;
    line-height: 1.6;
    font-family: Arial, sans-serif;
    font-size: 15px;
}

div {
    display: block;
    margin: 5px 0;
}

body > div {
    margin: 5px auto;
}

.settings {
    display: inline-block;
    border: 1px solid rgba(0, 0, 0, 50%);
    padding: 5px 10px;
    border-radius: 10px;
    
    width: 25em;
}

.setting {
    position: relative;
    margin: 0;
    padding: 3px 0;
}

.help-tooltip {
    display: none;
    position: absolute;
    left: -15px;
    margin-top: 1px;
    z-index: 1;
    font-style: italic;
    font-size: 85%;
    color: rgba(0, 0, 0, 85%);

    border: 1px solid rgba(0, 0, 0, 50%);
    background-color: rgba(255, 255, 255, 95%);
    pointer-events: none;
    padding: 5px 10px;
    border-radius: 10px;
}

.help-owner:hover .help-tooltip {
    display: block;
}

@media not (any-hover: hover) {
    .help-owner:active .help-tooltip,
    .help-owner:focus-within .help-tooltip {
        display: block;
    }
}

code {
    font-style: normal;
}

label {
    margin-right: 5px;
}

input:invalid {
    background-color: rgb(255, 200, 200);
}

input[type="text"],
input[type="number"] {
    width: 6em;
}

input[type="range"] {
    height: 10px;
    transform: translateY(2px);
}

.summon-only {
    max-height: 0;
    padding: 0;
    opacity: 0;
    overflow: hidden;
    transition: max-height 0.1s, padding 0.1s, opacity 0.1s;
}

.no-transition .summon-only {
    transition: none;
}

.output-type-summon .summon-only {
    max-height: 2em;
    padding: 3px 0;
    padding-left: 20px;
    opacity: 1;
    overflow: unset;
}

body .output,
body.image-loaded .no-output,
body .summon-only-text,
body.output-type-summon .non-summon-only-text {
    display: none;
}

body.image-loaded .output,
body .no-output {
    display: block;
}

body.output-type-summon .summon-only-text,
body .non-summon-only-text {
    display: inline;
}

.example-image {
    margin-top: 10px;
    border-radius: 10px;
    width: 50em;
}

#json-out {
    display: block;
}

#canvas-wrapper {
    position: relative;
}

#canvas {
    display: block;
    image-rendering: pixelated;
    border: 1px solid black;
    background-image: linear-gradient(45deg, #808080 25%, transparent 25%), linear-gradient(-45deg, #808080 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #808080 75%), linear-gradient(-45deg, transparent 75%, #808080 75%), linear-gradient(0deg, white 0%, white 100%);
    background-size: 10px 10px;
    background-position: 0 0, 0 5px, 5px -5px, -5px 0px;
}

#canvas-outline {
    position: absolute;
    border: 1px solid red;
    z-index: -1;
    margin: 0;
    top: 0;
    left: 0;
}

footer {
    position: fixed;
    bottom: 0;
    left: 0;
    padding: 5px 10px;
    border-top-right-radius: 10px;
    background: white;
}

